--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,7 @@
 @import './blocks/story-video.css';
 @import './blocks/expertise.css';
 @import './blocks/team.css';
+@import './blocks/works.css';
+@import './blocks/reviews.css';
+@import './blocks/contacts.css';
+@import './blocks/footer.css';
