--- a/styles/blocks/contacts.css
+++ b/styles/blocks/contacts.css
@@ -7,14 +7,15 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .feedback {
-  width: 50%;
+  flex-basis: 50%;
 }
 
 .clients {
-  width: 40%;
+  flex-basis: 40%;
 }
 
 .feedback__form input,
@@ -59,4 +60,23 @@
 .clients__item img {
   width: 100%;
   height: auto;
+}
+
+@media (max-width: 768px) {
+  .feedback,
+  .clients {
+    flex-basis: 100%;
+  }
+
+  .feedback__form {
+    margin-bottom: 30px;
+  }
+
+  .clients__title {
+    margin-bottom: 50px;
+  }
+
+  .clients__item {
+    flex-basis: 22%;
+  }
 }
