--- a/styles/blocks/footer.css
+++ b/styles/blocks/footer.css
@@ -197,3 +197,15 @@
   font-size: 14px;
   line-height: 26px;
 }
+
+@media (max-width: 425px) {
+  .page-footer {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .page-footer .row {
+    flex-direction: column;
+    align-items: center;
+  }
+}
