--- a/styles/blocks/team.css
+++ b/styles/blocks/team.css
@@ -80,3 +80,26 @@ p {
   color: #F3F3F3;
   margin-bottom: 27px;
 }
+
+@media (max-width: 768px) {
+  .team__list {
+    padding: 0 20px;
+    margin-bottom: 30px;
+  }
+
+  .team__item {
+    flex-basis: 45%;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 425px) {
+  .team__item {
+    flex-basis: 100%;
+  }
+
+  .team p {
+    text-align: center;
+  }
+}
